k8s/loop/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loop-web
  namespace: loop
spec:
  selector:
    app: loop-web
  ports:
    - name: http
      port: 3000
      targetPort: 3000
