k8s/loop/web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loop-web
  namespace: loop
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/router.middlewares: authentik-authentik-forwardauth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: habits.json-server.win
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loop-web
                port:
                  number: 3000
  tls:
    - secretName: loop-web-tls
      hosts:
        - habits.json-server.win
